# oead

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  appveyor.yml  readme.rst  setup.cfg  setup.py
.github/workflows/: build.yml  oead-py-win.yml  release.yml
data/: aglenv_file_info.json  botw_hashed_names.txt  botw_numbered_names.txt  botw_resource_factory_info.tsv
docs/: requirements.txt
docs/doxygen/: Doxyfile
docs/source/: _aamp_status.rst  aamp.rst  aamp_py.rst  byml.rst  byml_py.rst  conf.py  gsheet.rst  gsheet_py.rst  index.rst  sarc.rst  sarc_py.rst  types.rst  types_py.rst  utils.rst  yaz0.rst  yaz0_common.rst  yaz0_py.rst
docs/source/parts/: byml_common.rst  py_common.rst
lib/nonstd/nonstd/: visit.h
py/: CMakeLists.txt  _version.py  main.cpp  main.h  py_aamp.cpp  py_byml.cpp  py_common_types.cpp  py_gsheet.cpp  py_sarc.cpp  py_yaz0.cpp  pybind11_common.h  pybind11_variant_caster.h
src/: aamp.cpp  aamp_text.cpp  byml.cpp  byml_text.cpp  gsheet.cpp  sarc.cpp  yaml.cpp  yaml.h  yaz0.cpp
src/include/oead/: aamp.h  byml.h  errors.h  gsheet.h  sarc.h  types.h  yaz0.h
src/include/oead/util/: binary_reader.h  bit_utils.h  hash.h  iterator_utils.h  magic_utils.h  scope_guard.h  string_utils.h  swap.h  type_utils.h  variant_utils.h
src/util/: align.h  binary_reader.h  bit_utils.h  hash.h  swap.h  variant_utils.h
test/: conftest.py  test_benchmark_aamp_from_binary.py
test/aamp/: test.yml  test_aamp_empty_strings.py  test_aamp_roundtrip.py  test_benchmark_aamp_from_binary.py  test_benchmark_aamp_from_text.py  test_empty_strings.yml
test/aamp/files/: CharacterControllerTable.bphyscharcon  Demo000_0.bdemo  Demo000_2.bdemo  Demo001_0.bdemo  Demo002_0.bdemo  Demo006_0.bdemo  Demo007_1.bdemo  Demo008_1.bdemo  Demo008_3.bdemo  Demo010_0.bdemo  Demo010_1.bdemo  Demo011_0.bdemo  Demo017_0.bdemo  Demo025_0.bdemo  Demo042_0.bdemo  Demo042_1.bdemo  Demo048_0.bdemo  Demo048_1.bdemo  Demo103_0.bdemo  Enemy_Lizalfos_Electric.bchemical  EngineRom_Horse_Link.bphysics  EntityContactInfoTable.bphyscontact  EntityLayerTable.bphyslayer  FieldBattleBgm.bmscinfo  GameRomHorse.bbonectrl  GameRomHorse.bchemical  GameRomHorse.bmodellist  GameRomHorse.brgbw  GameRomHorse.brgconfiglist  Horse.bdmgparam  Horse.blifecondition  Horse_Link.baslist  Lizalfos.bphysics  MusicList.bmscdef  PhysicsMaterialTable.bphysmaterial  PhysicsSubMaterialTable.bphyssubmat  RagdollControllerKeyList.brgcon  SensorContactInfoTable.bphyscontact  SensorFilter.bsft  SensorFilterBuffer.bsfbt  (+20 more)
test/aamp/files/AIProgram/: AIScheduleAnchor.baiprog  ASPlayControlRigidShutter.baiprog  ASPlayShutter.baiprog  ActorObserverByActorTagTag.baiprog  ActorObserverByGroupTag.baiprog  ActorObserverTag.baiprog  ActorRecreateTag.baiprog  AddAutoPlacementCreator.baiprog  AirOcta_Tag.baiprog  AirWall.baiprog  AirWallCurseGanon.baiprog  AirWallForCastleBarrier.baiprog  AirWallForE3.baiprog  AirWallHorse.baiprog  AlarmLynelTag.baiprog  AncientBall.baiprog  AncientBallChangeDamping.baiprog  AncientNecklaceBall.baiprog  AncientOven.baiprog  AnimalGullSwarm.baiprog  Animal_Horse_A.baiprog  Animal_SunazarashiSP_B.baiprog  AnmArmor.baiprog  Area.baiprog  AreaBottomTag.baiprog  AreaCulling.baiprog  AreaCullingClipArea.baiprog  Armor.baiprog  ArmorProcessingEventTag.baiprog  ArmorProcessingFairy.baiprog  Armor_Korok_Head.baiprog  ArrowRoot.baiprog  AscendingCurrent.baiprog  AscendingCurrentBeastGanon.baiprog  AscendingCurrentShieldable.baiprog  AscendingCurrent_FireRelic_Storage.baiprog  AscendingCurrent_GuardianMini.baiprog  AscendingCurrent_Slow.baiprog  AscendingCurrent_WindRelic_Top.baiprog  Assassin.baiprog  (+638 more)
test/aamp/files/AS/: Horse_Link_Appear_Epona.bas  Horse_Link_AttackFront.bas  Horse_Link_Before_Event.bas  Horse_Link_Collar_Shader.bas  Horse_Link_Collar_Shader_Coward.bas  Horse_Link_Collar_Shader_EponaHorse.bas  Horse_Link_Collar_Shader_ZeldaHorse.bas  Horse_Link_Courbette.bas  Horse_Link_Courbette_For_Rodeo.bas  Horse_Link_Crash.bas  Horse_Link_Crying.bas  Horse_Link_Damage.bas  Horse_Link_Dead.bas  Horse_Link_Dislike.bas  Horse_Link_Drown.bas  Horse_Link_Eat.bas  Horse_Link_Eat_High.bas  Horse_Link_Fall.bas  Horse_Link_FallDown.bas  Horse_Link_Foot_Visibility.bas  Horse_Link_Horseshoe.bas  Horse_Link_Jump_Gear3.bas  Horse_Link_Jump_Gear3_S.bas  Horse_Link_Jump_Gear4.bas  Horse_Link_Jump_Gear4_S.bas  Horse_Link_KickBack.bas  Horse_Link_Slip.bas  (+22 more)
test/byml/: test_benchmark_byml_convert_text_to_bin.py  test_benchmark_byml_from_binary.py  test_benchmark_byml_from_text.py  test_benchmark_byml_to_binary.py  test_benchmark_byml_to_text.py  test_byml_roundtrip.py
test/byml/files/: Preset0_Field.byml  binary.yml
test/gsheet/: test_gsheet_roundtrip.py
test/gsheet/files/: AutoSaveLocation.gsheet  Conditions.gsheet  CranePrize.gsheet  CranePrizeFeaturedPrizeGroup1.gsheet  CranePrizeFeaturedPrizeGroup2.gsheet  CranePrizePhysicsTraits.gsheet  Facial.gsheet  FadePreset.gsheet  FishingFish.gsheet  FishingSpot.gsheet  GlobalFlags.gsheet  HidButtonTable.gsheet  InterestIK.gsheet  ItemDrop.gsheet  Items.gsheet  Light.gsheet  LocationName.gsheet  MapPieceClearReward.gsheet  MapPieceList.gsheet  MapPieceSideView.gsheet  MapPieceTheme.gsheet  Npc.gsheet  NpcPhysicsTraits.gsheet  PanelDoorLight.gsheet  PanelStone.gsheet  PanelTreasureBox.gsheet  PanelTutorial.gsheet  PlayerAnimation.gsheet  Reaction.gsheet  ShopItem.gsheet  ShopPanelItem.gsheet  TelephoneHint.gsheet  ThemeSelectDialog.gsheet  UiDungeonArea.gsheet  UiDungeonIcon.gsheet  UiDungeonStair.gsheet  UiFieldMapIcons.gsheet  UiFieldMapLocationName.gsheet  UiFieldMapMask.gsheet  UiItemMenuCursorMoveTable.gsheet  (+4 more)
test/helpers/: utils.py
test/sarc/: test_sarc_get_file.py  test_sarc_roundtrip.py
test/sarc/files/: A-1.00.sarc  ActorObserverByActorTagTag.sarc  test.sarc
test/yaz0/: benchmark_sizes.py  files.py  results_compress.txt  results_decompress.txt  results_size.txt  test_benchmark_compress.py  test_benchmark_decompress.py  test_yaz0.py
test/yaz0/files/: 0-0.shknm2  ActorInfo.product.sbyml  Demo344_1.sbeventpack  ResourceSizeTable.product.srsizetable
(+1481 files in other folders)
